handling the feed posts in the backend and the profile posts